:fire: Added POST option to student and admin page.

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
 
-        <form action="/getAdmin" method="GET">
+        <form action="/postAdmin" method="POST">
             <label for="adminID">AdminID</label>
             <input type="text" id="adminID" name="adminID"/>
             <br/>
