--- a/pages/student.html
+++ b/pages/student.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
 
-        <form action="/getStudent" method="GET">
+        <form action="/postStudent" method="POST">
             <label for="studentID">StudentID</label>
             <input type="text" id="studentID" name="studentID"/>
             <br/>
