:bulb: Added upload form in AdminPage

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
 
-        <form action="/postAdmin" method="POST">
+        <<form action="/uploads" enctype="multipart/form-data" method="post">
             <label for="adminID">AdminID</label>
             <input type="text" id="adminID" name="adminID"/>
             <br/>
@@ -38,7 +38,10 @@
             <label for="department">Department</label>
             <input type="text" id="department" name="department"/>
             <br/>
-            <input type="submit" value="Submit"/>
+            <label for="file"> Select File:</label>
+            <input type="file" id="file" name="file">
+            <br/>
+            <input type="submit" value="Upload">
         </form>
     </body>
 </html>
